- MBTI 조회 API   - Response 수정